card media now supports dynamic size of viewport for better responsive design and small style changes. updated resource links for vuejs server instead of legacy mean server

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <link rel="apple-touch-icon" sizes="152x152" href="static/favicon-152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="static/favicon-180.png">
     <!-- Microsoft windows tile colors -->
-    <meta name="msapplication-TileColor" content="#e91e63">
+    <meta name="msapplication-TileColor" content="#c2185b">
     <!-- Mobile chrome theme colors -->
-    <meta name="theme-color" content="#e91e63">
+    <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="static/favicon-144.png">
     <meta name="msapplication-config" content="static/browserconfig.xml">
   </head>
