--- a/index.html
+++ b/index.html
@@ -7,25 +7,32 @@
     <!-- Roboto font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
     <!-- favicon in multiple scales/sizes -->
-    <link rel="icon" sizes="16x16 32x32 64x64" href="static/favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="static/favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="static/favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="static/favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="static/favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/favicon-16.png">
+    <link rel="icon" sizes="16x16 32x32 64x64" href="/static/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/static/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/static/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/static/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16.png">
     <!-- apple touch for IOS and MacBook Pro touchbar -->
-    <link rel="apple-touch-icon" href="static/favicon-57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="static/favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="static/favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="static/favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="static/favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="static/favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="static/favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="static/favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="static/favicon-180.png">
+    <link rel="apple-touch-icon" href="/static/favicon-57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/favicon-180.png">
     <!-- Microsoft windows tile colors -->
     <meta name="msapplication-TileColor" content="#c2185b">
+    <!-- ios safari status bar color -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#c2185b">
+    <!-- ios safari startup image -->
+    <link rel="apple-touch-startup-image" href="/static/favicon-144.png">
+    <!-- ios safari app title -->
+    <meta name="apple-mobile-web-app-title" content="Alex Ng's portfolio">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- Mobile chrome theme colors -->
     <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="static/favicon-144.png">
