added shortcut icon tag

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <!-- ios safari app title -->
     <meta name="apple-mobile-web-app-title" content="Alex Ng's portfolio">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- shortcut for favorites -->
+    <link rel="shortcut icon" type="image/png" href="/apple-touch-icon.png">
     <!-- Mobile chrome theme colors -->
     <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="static/favicon-144.png">
