moved favicons to root directory.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Roboto font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
     <!-- favicon in multiple scales/sizes -->
-    <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
+    <link rel="shortcut icon" sizes="16x16 32x32 64x64" type="image/x-icon" href="favicon.ico">
     <link rel="icon" type="image/png" sizes="196x196" href="favicon-192.png">
     <link rel="icon" type="image/png" sizes="160x160" href="favicon-160.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96.png">
@@ -35,6 +35,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- shortcut for favorites -->
     <link rel="shortcut icon" type="image/png" href="apple-touch-icon.png">
+    <link rel="mask-icon" href="apple-touch-icon.png" color="#c2185b">
     <!-- Mobile chrome theme colors -->
     <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="favicon-144.png">
