tweaking macbook touchbar tags

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- shortcut for favorites -->
     <link rel="shortcut icon" type="image/png" href="apple-touch-icon.png">
-    <link rel="mask-icon" href="apple-touch-icon.png" color="#c2185b">
+    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="Alex Ng">
     <!-- Mobile chrome theme colors -->
     <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="favicon-144.png">
