--- a/index.html
+++ b/index.html
@@ -6,36 +6,39 @@
     <title>Alex Ng - Web developer</title>
     <!-- Roboto font -->
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#c2185b">
     <!-- favicon in multiple scales/sizes -->
-    <link rel="shortcut icon" sizes="16x16 32x32 64x64" type="image/x-icon" href="favicon.ico">
-    <link rel="icon" type="image/png" sizes="196x196" href="favicon-192.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="favicon-160.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="favicon-64.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+    <link rel="shortcut icon" sizes="16x16 32x32 64x64" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="196x196" href="/favicon-192.png">
+    <link rel="icon" type="image/png" sizes="160x160" href="/favicon-160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
     <!-- apple touch for IOS and MacBook Pro touchbar -->
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="favicon-114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="favicon-72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="favicon-144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="favicon-60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="favicon-120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="favicon-76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="favicon-152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon-180.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon-114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon-72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon-144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon-60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon-120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon-76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon-152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png">
     <!-- Microsoft windows tile colors -->
     <meta name="msapplication-TileColor" content="#c2185b">
     <!-- ios safari status bar color -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#c2185b">
     <!-- ios safari startup image -->
-    <link rel="apple-touch-startup-image" href="favicon-144.png">
+    <link rel="apple-touch-startup-image" href="/favicon-144.png">
     <!-- ios safari app title -->
     <meta name="apple-mobile-web-app-title" content="Alex Ng's portfolio">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <!-- shortcut for favorites -->
-    <link rel="shortcut icon" type="image/png" href="apple-touch-icon.png">
-    <link rel="fluid-icon" href="https://github.com/fluidicon.png" title="Alex Ng">
+    <link rel="shortcut icon" type="image/png" href="/apple-touch-icon.png">
     <!-- Mobile chrome theme colors -->
     <meta name="theme-color" content="#c2185b">
     <meta name="msapplication-TileImage" content="favicon-144.png">
